--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Setup Git
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "pasucon@gmail.com"
+        git config --global user.name "Luke"
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
