--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,39 @@
 {
-  "name": "Bailey's Deals",
-  "short_name": "Deals",
-  "description": "An app to notify customers of new deals.",
-  "start_url": ".",
+  "name": "Bailey's Discount Center",
+  "short_name": "BDC",
+  "description": "Get the latest deals and updates from Bailey's Discount Center.",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#333333",
   "icons": [
     {
-      "src": "images/logo.png",
+      "src": "images/logo48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "images/logo72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "images/logo96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "images/logo144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "images/logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/logo.png",
+      "src": "images/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
